--- a/index10.html
+++ b/index10.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>if else condition</title>
 </head>
 <body>
-     <script src="nestedif.js"></script>
+    
+    <script src="ifelse2.js"></script>
 </body>
 </html>
