--- a/index16.html
+++ b/index16.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vowel or Consonant</title>
 </head>
 <body>
-     <script src="nestedif.js"></script>
+    <script src="vowelconsonantchecker.js"></script>
 </body>
 </html>
