--- a/index17.html
+++ b/index17.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Traffic light checker</title>
 </head>
 <body>
-     <script src="nestedif.js"></script>
+    <script src="trafficlightchecker.js"></script>
 </body>
 </html>
