--- a/index29.html
+++ b/index29.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GPA Checker</title>
 </head>
 <body>
-     <script src="nestedif.js"></script>
+    <script src="scholarship.js"></script>
 </body>
 </html>
+
