--- a/Loops/index43.html
+++ b/Loops/index43.html
@@ -1,13 +1,11 @@
-!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Printing of Hello World using document.write</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="documentWrite.js">
-
-    </script>
+    <script src="functions.js"></script>
 </body>
 </html>
