--- a/Loops/mutableandimmutable/scope/Promises/window/index53.html
+++ b/Loops/mutableandimmutable/scope/Promises/window/index53.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fibonacci series</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="fibonacci.js"></script>
+    <script src="window.js"></script>
 </body>
-<div class="container"></div>
-<div class="container"></div>
-<div class="container"></div>
-
-
 </html>
 
