--- a/Loops/mutableandimmutable/scope/Promises/window/DOM/Events/index55.html
+++ b/Loops/mutableandimmutable/scope/Promises/window/DOM/Events/index55.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css" type="text/css" />
  <!--  <script defer src="./dom.js"></script> -->
 </head>
 <body>
@@ -16,10 +16,23 @@
     <p class="transport">Rocket</p>
 
     <h5 id="randomText">
-       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-       Mollitia dolores doloremque, recusandae animi aut ducimus atque enim voluptatibus a quis hic facilis dolor cumque illo quam, tenetur repellat velit ratione!
+       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga,
+       reiciendis, doloremeque ad cum deleniti distinctio totam in excepturi quo
+       nulla optio, iusto aut saepe. Quos modi voluptas laboriosam omnis ipsa
+       quisquam quod. Asperiores aspernatur, itaque perspiciatis quis mollitia,
+       perferendis neque placeat, rem w=earum optio autem eaque amet est unde
+       facilis?   
+       
     </h5>
 
     <div id="myContainer"></div>
+
+    <h2>Hello Javascript</h2>
+    <h2>Hello Javascript</h2>
+    <h2>Hello Javascript</h2>
+    <h2>Hello Javascript</h2>
+    <script src="dom.js"></script>
 </body>
 </html>
+
+
