--- a/Instagram App/index.html
+++ b/Instagram App/index.html
@@ -17,24 +17,25 @@
  </header>
 
   <section class="stories" id="stories">
-    <div class="story" onclick="openStoryModal('Your Story')">+</div>
-    <div class="story" onclick="openStoryModal('Friend 1')"></div>
-    <div class="story" onclick="openStoryModal('Friend 2')"></div>
+    <button class="story" onclick="openStoryModal('Your Story')">+</button>
+    <button class="story" onclick="openStoryModal('Friend 1')">F1</button>
+    <button class="story" onclick="openStoryModal('Friend 2')">F2</button>
   </section>
 
   <section class="feed" id="feed"></section>
 
-  <footer>
-    <input type="file" id="upload" accept="image/*" />
-    <input type="text" id="caption" placeholder="Write a caption..." />
-    <button onclick="createPost()">Post</button>
-  </footer>
+ <footer>
+  <input type="file" id="upload" accept="image/*" title="Upload Image" />
+  <input type="text" id="caption" placeholder="Write a caption..." />
+  <button onclick="createPost()">Post</button>
+</footer>
+
 
   <!-- Story Modal -->
   <div id="storyModal" class="modal">
     <div class="modal-content">
-      <span class="close" onclick="closeStoryModal()">&times;</span>
-      <p id="storyContent"></p>
+     <button class="close" onclick="closeStoryModal()" aria-label="Close Story Modal">&times;</button>
+     <p id="storyContent"></p>
     </div>
   </div>
 
